Lightened up sidebar icons and fixed context menu arrow alignment

--- a/airtime_mvc/public/css/jquery.contextMenu.css
+++ b/airtime_mvc/public/css/jquery.contextMenu.css
@@ -94,9 +94,6 @@
 .context-menu-submenu:after {
     content: ">";
     color: #666;
-    position: absolute;
-    top: 0;
-    right: 3px;
     z-index: 1;
 }
 
